--- a/src/app/layout/egreso-vehiculos/egreso-vehiculos.component.html
+++ b/src/app/layout/egreso-vehiculos/egreso-vehiculos.component.html
@@ -1,33 +1,33 @@
 <app-page-header [heading]="'Egreso de un Vehículo'" [icon]="'fa-car'"></app-page-header>
-<form class="form-horizontal" #f="ngForm">
-    <div class="modal-body">
+<div [@routerTransition]>
+    <form class="form-horizontal" #f="ngForm">
+        <div class="modal-body">
 
-        <h3 class="col-sm-12 text-center" >Datos Obligatorios</h3>
-        <hr>
+            <ngb-alert type="success" (close)="closeAlert = true" *ngIf="submittedExitoso && !closeAlert" >
+                <strong>Egreso Exitoso!</strong> El egreso del vehiculo patente {{patente}} fue marcado exitosamente.
+            </ngb-alert>
+            <ngb-alert type="danger" (close)="closeAlert = true" *ngIf="!submittedExitoso && !closeAlert" >
+                <strong>Egreso Fallido!</strong> El egreso del vehiculo patente {{patente}} fallo.
+            </ngb-alert>
 
-        <ngb-alert type="success" (close)="closeAlert = true" *ngIf="submittedExitoso && !closeAlert" >
-            <strong>Egreso Exitoso!</strong> El egreso del vehiculo patente {{patente}} fue marcado exitosamente.
-        </ngb-alert>
-        <ngb-alert type="danger" (close)="closeAlert = true" *ngIf="!submittedExitoso && !closeAlert" >
-            <strong>Egreso Fallido!</strong> El egreso del vehiculo patente {{patente}} fallo.
-        </ngb-alert>
-
-        <div class="form-group row">
-            <label for="ingreso-patente" class="col-sm-3 required control-label text-center">Patente</label>
-            <div class="col-sm-7"
-                 [ngClass]="{'has-danger': !patente.valid && (!patente.pristine || patente.touched || submitted),
+            <div class="form-group row">
+                <label for="ingreso-patente" class="col-sm-3 required control-label text-center">Patente</label>
+                <div class="col-sm-7"
+                     [ngClass]="{'has-danger': !patente.valid && (!patente.pristine || patente.touched || submitted),
                 'has-success': patente.valid}">
-                <input type="text" class="form-control has-feedback" id="ingreso-patente" name="patente" [(ngModel)]="nroPatente" #patente="ngModel" (keyup)="onPatenteChange()" required [maxLength]="191" placeholder="Patente">
-                <span *ngIf="patente.valid" class="form-control-feedback"></span>
-                <span *ngIf="patente.errors !== null && (!patente.pristine || patente.touched || submitted)" class="form-control-feedback"></span>
-                <div *ngIf="!patente.valid && (!patente.pristine || patente.touched || submitted)" class="has-danger form-control-feedback"> *Ingrese la patente</div>
+                    <input type="text" class="form-control has-feedback" id="ingreso-patente" name="patente" [(ngModel)]="nroPatente" #patente="ngModel"
+                           (keyup)="onPatenteChange()" pattern="([A-Z]{3}|[a-z]{3})[0-9]{3}|[A-Z]{2}[0-9]{3}[A-Z]{2}" required [maxLength]="191" placeholder="Ej: AAA123">
+                    <span *ngIf="patente.valid" class="form-control-feedback"></span>
+                    <span *ngIf="patente.errors !== null && (!patente.pristine || patente.touched || submitted)" class="form-control-feedback"></span>
+                    <div *ngIf="!patente.valid && (!patente.pristine || patente.touched || submitted)" class="has-danger form-control-feedback"> *Ingrese la patente</div>
+                </div>
             </div>
         </div>
-    </div>
 
-    <div class="modal-footer">
-        <button type="button" class="btn btn-default" data-dismiss="modal">Cancelar</button>
-        <button type="submit" (click)="onSubmitClicked()" class="btn btn-primary">Aceptar</button>
-    </div>
+        <div class="modal-footer">
+            <button type="button" class="btn btn-default" data-dismiss="modal">Cancelar</button>
+            <button type="submit" (click)="onSubmitClicked()" class="btn btn-primary">Aceptar</button>
+        </div>
 
-</form>
+    </form>
+</div>
