--- a/src/app/layout/ingreso-vehiculos/ingreso-vehiculos.component.html
+++ b/src/app/layout/ingreso-vehiculos/ingreso-vehiculos.component.html
@@ -13,7 +13,7 @@
             <div class="card mb-3 form-group">
                 <div class="card-header custom-card-header-main">Datos obligatorios</div>
                 <div class="card-block row">
-                    <label for="ingreso-patente" class="col-sm-3 required control-label text-right"><h3>Patente </h3></label>
+                    <label for="ingreso-patente" class="col-sm-3 required control-label text-right"><h4>Patente </h4></label>
                     <div class="col-sm-6"
                          [ngClass]="{'has-danger': !patente.valid && (!patente.pristine || patente.touched || submitted),
                 'has-success': patente.valid}">
@@ -97,8 +97,8 @@
 
 
             <div class="modal-footer custom-modal-footer">
-                <button type="button" class="btn custom-btn btn-default" (click)="onCleanClicked()">LIMPIAR</button>
-                <button type="submit" class="btn custom-btn btn-primary btn-success" (click)="onSubmitClicked()">GUARDAR</button>
+                <button type="button" class="btn custom-btn btn-default" (click)="onCleanClicked(f)">LIMPIAR</button>
+                <button type="submit" class="btn custom-btn btn-primary btn-success" (click)="onSubmitClicked(f)">GUARDAR</button>
             </div>
         </div>
     </form>
