Egreso modal footer - justify center

--- a/src/app/layout/egreso-vehiculos/egreso-vehiculos.component.html
+++ b/src/app/layout/egreso-vehiculos/egreso-vehiculos.component.html
@@ -24,7 +24,7 @@
             </div>
         </div>
 
-        <div class="modal-footer">
+        <div class="modal-footer custom-modal-footer">
             <button type="button" class="btn btn-default" data-dismiss="modal">Cancelar</button>
             <button type="submit" (click)="onSubmitClicked(f)" class="btn btn-primary">Aceptar</button>
         </div>
