--- a/src/app/layout/egreso-vehiculos/egreso-vehiculos.component.scss
+++ b/src/app/layout/egreso-vehiculos/egreso-vehiculos.component.scss
@@ -1,3 +1,15 @@
 .custom-modal-footer {
     justify-content: center;
 }
+.custom-card-header-main {
+    background-color: rgba(0, 71, 194, 0.75);
+    color: white;
+    font-weight: bold;
+}
+.custom-btn{
+    height: 5em;
+    width: 12em;
+    font-size: 1.2em;
+    text-align: center;
+    display: inline-block;
+}
