Fix Social router-link - Sidebar

--- a/src/app/shared/components/sidebar/sidebar.component.html
+++ b/src/app/shared/components/sidebar/sidebar.component.html
@@ -117,7 +117,7 @@
                 </ul>
             </li>
         </div>
-        <a [routerLink]="['/dashboard']" [routerLinkActive]="['router-link-active']" class="list-group-item">
+        <a [routerLink]="['/social']" [routerLinkActive]="['router-link-active']" class="list-group-item">
             <i class="fa fa-comments"></i>&nbsp;{{ 'Social' | translate }}
         </a>
         <a [routerLink]="['/settings']" [routerLinkActive]="['router-link-active']" class="list-group-item">
