--- a/src/app/layout/admin-panel/admin-panel.component.html
+++ b/src/app/layout/admin-panel/admin-panel.component.html
@@ -12,8 +12,8 @@
                     <div class="form-group row has-warning">
                         <label for="id-parque" class="col-sm-3 required control-label text-center">Nombre</label>
                         <div class="col-sm-9">
-                            <input class="form-control has-feedback" id="id-parque" name="nombre" [(ngModel)]="parque.idEstacionamiento"
-                                   #nombre="ngModel"  placeholder="ID del Parque" (keyup)="buscarPorId()">
+                            <input class="form-control has-feedback" id="id-parque" name="nombre" placeholder="ID del Parque"
+                                   type="number" (input)="buscarPorId($event)">
                             <span class="form-control-feedback has-warning">Solo ingrese ID para editar un parque existente</span>
                         </div>
                     </div>
