Fixes estetica responsive

--- a/src/app/layout/dashboard/dashboard.component.html
+++ b/src/app/layout/dashboard/dashboard.component.html
@@ -14,16 +14,16 @@
     <hr>
     <div class="row">
         <!-- TODO cambiar links /login a donde corresponda -->
-        <a class="col-xl-3 col-lg-6" [routerLink]="['/ingreso-egreso/ingreso']">
+        <a class="col-xl-3 col-lg-6 dashboard-item" [routerLink]="['/ingreso-egreso/ingreso']">
             <app-stat [bgClass]="'card-success'" [icon2]="'fa-car'" [icon]="'fa-sign-in'" [data]="'INGRESO VEHÍCULO'" ></app-stat>
         </a>
-        <a class="col-xl-3 col-lg-6" [routerLink]="['/ingreso-egreso/egreso']">
+        <a class="col-xl-3 col-lg-6 dashboard-item" [routerLink]="['/ingreso-egreso/egreso']">
             <app-stat [bgClass]="'card-danger'" [icon]="'fa-car'" [icon2]="'fa-sign-out'" [data]="'SALIDA VEHÍCULO'"></app-stat>
         </a>
-        <a class="col-xl-3 col-lg-6" [routerLink]="['/login']">
+        <a class="col-xl-3 col-lg-6 dashboard-item" [routerLink]="['/login']">
             <app-stat [bgClass]="'card-primary'" [icon]="'fa-money'" [count]="4" [label]="'nuevas reservas!'" [data]="'VER RESERVAS'" ></app-stat>
         </a>
-        <a class="col-xl-3 col-lg-6" [routerLink]="['/login']">
+        <a class="col-xl-3 col-lg-6 dashboard-item" [routerLink]="['/login']">
             <app-stat [bgClass]="'card-info'" [icon]="'fa-bar-chart'" [count]="21" [label]="'vehículos ingresados'" [data]="'ESTADÍSTICAS'" ></app-stat>
         </a>
     </div>
@@ -45,7 +45,7 @@
 
     <div class="row">
         <div class="col-lg-4">
-            <div class="card card-default">
+            <div class="card card-default dashboard-table">
                 <div class="card-header card-success">
                     <i class="fa fa-sign-in fa-car"></i> Últimos ingresos
                 </div>
@@ -72,7 +72,7 @@
         </div>
 
         <div class="col-lg-4">
-            <div class="card card-default">
+            <div class="card card-default dashboard-table">
                 <div class="card-header card-danger">
                     <i class="fa fa-dollar"></i> Últimos egresos
                 </div>
@@ -101,7 +101,7 @@
         </div>
 
         <div class="col-lg-4">
-            <div class="card card-default">
+            <div class="card card-default dashboard-table">
                 <div class="card-header card-info">
                     <i class="fa fa-info-circle"></i> Información general
                 </div>
