--- a/src/app/layout/historial-ingresos-egresos/historial-ingresos-egresos.component.html
+++ b/src/app/layout/historial-ingresos-egresos/historial-ingresos-egresos.component.html
@@ -6,7 +6,7 @@
     </div>
 </div>
 
-<div [@routerTransition]>
+<div [@routerTransition] id="mytable">
     <div>
         <!--TODO aca poner un div con todos los filtros (DatePickers, checkbox, input...)-->
     </div>
