--- a/src/app/layout/notific-ingresados/notific-ingresados.component.html
+++ b/src/app/layout/notific-ingresados/notific-ingresados.component.html
@@ -1,5 +1,5 @@
 <app-page-header [heading]="'Notificar a Usuarios'" [icon]="'fa-bell'"></app-page-header>
-<div [@routerTransition]>
+<div [@routerTransition] id="mytable">
     <div class="progress" *ngIf="ocultarTabla">
         <div class="progress-bar progress-bar-striped active" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100" style="width: 100%">
             <span>Cargando<span class="dotdotdot"></span></span>
