--- a/src/app/layout/charts/charts.component.html
+++ b/src/app/layout/charts/charts.component.html
@@ -7,7 +7,10 @@
                     Bar Chart
                 </div>
                 <div class="card-block">
-                    <canvas baseChart [datasets]="barChartData" [labels]="barChartLabels" [options]="barChartOptions" [legend]="barChartLegend" [chartType]="barChartType" (chartHover)="chartHovered($event)" (chartClick)="chartClicked($event)">
+                    <canvas baseChart [datasets]="barChartData"
+                            [labels]="barChartLabels" [options]="barChartOptions"
+                            [legend]="barChartLegend" [chartType]="barChartType"
+                            (chartHover)="chartHovered($event)" (chartClick)="chartClicked($event)">
                     </canvas>
                 </div>
                 <div class="card-footer">
@@ -21,7 +24,9 @@
                     Doughnut Chart
                 </div>
                 <div class="card-block">
-                    <canvas baseChart height="180px" [data]="doughnutChartData" [labels]="doughnutChartLabels" [chartType]="doughnutChartType" (chartHover)="chartHovered($event)" (chartClick)="chartClicked($event)">
+                    <canvas baseChart height="180px" [data]="doughnutChartData"
+                            [labels]="doughnutChartLabels" [chartType]="doughnutChartType"
+                            (chartHover)="chartHovered($event)" (chartClick)="chartClicked($event)">
                     </canvas>
                 </div>
             </div>
@@ -34,7 +39,9 @@
                     Radar Chart
                 </div>
                 <div class="card-block">
-                    <canvas baseChart height="150px" [datasets]="radarChartData" [labels]="radarChartLabels" [chartType]="radarChartType" (chartHover)="chartHovered($event)" (chartClick)="chartClicked($event)">
+                    <canvas baseChart height="150px" [datasets]="radarChartData"
+                            [labels]="radarChartLabels" [chartType]="radarChartType"
+                            (chartHover)="chartHovered($event)" (chartClick)="chartClicked($event)">
                     </canvas>
                 </div>
             </div>
@@ -45,7 +52,9 @@
                     Pie Chart
                 </div>
                 <div class="card-block">
-                    <canvas baseChart height="150px" [data]="pieChartData" [labels]="pieChartLabels" [chartType]="pieChartType" (chartHover)="chartHovered($event)" (chartClick)="chartClicked($event)">
+                    <canvas baseChart height="150px" [data]="pieChartData"
+                            [labels]="pieChartLabels" [chartType]="pieChartType"
+                            (chartHover)="chartHovered($event)" (chartClick)="chartClicked($event)">
                     </canvas>
                 </div>
             </div>
@@ -58,7 +67,10 @@
                     Polar Area Chart
                 </div>
                 <div class="card-block">
-                    <canvas baseChart height="130px" [data]="polarAreaChartData" [labels]="polarAreaChartLabels" [legend]="polarAreaLegend" [chartType]="polarAreaChartType" (chartHover)="chartHovered($event)" (chartClick)="chartClicked($event)">
+                    <canvas baseChart height="130px" [data]="polarAreaChartData"
+                            [labels]="polarAreaChartLabels" [legend]="polarAreaLegend"
+                            [chartType]="polarAreaChartType" (chartHover)="chartHovered($event)"
+                            (chartClick)="chartClicked($event)">
                     </canvas>
                 </div>
             </div>
@@ -69,7 +81,11 @@
                     Line Chart
                 </div>
                 <div class="card-block">
-                    <canvas baseChart height="130" [datasets]="lineChartData" [labels]="lineChartLabels" [options]="lineChartOptions" [colors]="lineChartColors" [legend]="lineChartLegend" [chartType]="lineChartType" (chartHover)="chartHovered($event)" (chartClick)="chartClicked($event)">
+                    <canvas baseChart height="130" [datasets]="lineChartData"
+                            [labels]="lineChartLabels" [options]="lineChartOptions"
+                            [colors]="lineChartColors" [legend]="lineChartLegend"
+                            [chartType]="lineChartType" (chartHover)="chartHovered($event)"
+                            (chartClick)="chartClicked($event)">
                     </canvas>
                 </div>
             </div>
