--- a/src/app/layout/reporte-1/reporte-1.component.html
+++ b/src/app/layout/reporte-1/reporte-1.component.html
@@ -1,3 +1,71 @@
-<p>
-  reporte-1 works!
-</p>
+<div class="row">
+    <div class="col-md-12">
+        <h2>Grafico estadistico</h2>
+        <hr>
+        <br>
+    </div>
+</div>
+<div class="row">
+    <div class="col-md-4">
+        <label class="control-label">Desde</label>
+        <form class="form-inline mb-3">
+            <div class="form-group">
+                <div class="input-group">
+                    <input class="form-control" placeholder="dd-mm-yyyy"
+                           name="desde" [(ngModel)]="modelDesde" ngbDatepicker #desde="ngbDatepicker">
+                    <div class="input-group-addon" (click)="desde.toggle()" >
+                        <span class="fa fa-calendar"></span>
+                    </div>
+                </div>
+            </div>
+        </form>
+    </div>
+    <div class="col-md-4">
+        <label class="control-label">Hasta</label>
+        <form class="form-inline mb-3">
+            <div class="form-group">
+                <div class="input-group">
+                    <input class="form-control" placeholder="dd-mm-yyyy"
+                           name="hasta" [(ngModel)]="modelHasta" ngbDatepicker #hasta="ngbDatepicker">
+                    <div class="input-group-addon" (click)="hasta.toggle()">
+                        <span class="fa fa-calendar"></span>
+                    </div>
+                </div>
+            </div>
+        </form>
+    </div>
+    <div class="col-md-2">
+        <label class="control-label">Intervalo</label>
+        <div class="form-group">
+            <select [(ngModel)]="modelIntervalo" class="form-control alineado">
+                <option class="active">Horas</option>
+                <option>Dias</option>
+                <option>Meses</option>
+                <option>Años</option>
+            </select>
+        </div>
+    </div>
+    <div class="col-md-12">
+        <button (click)="onGenerateClick()" class="btn btn-success" style="vertical-align: bottom; float: right">Generar Grafico</button>
+    </div>
+    <br>
+    <br>
+</div>
+<div class="row">
+    <div class="col col-md-12">
+        <div class="card mb-3">
+            <div class="card-header">
+                Line Chart
+            </div>
+            <div class="card-block">
+                <canvas baseChart height="130" [datasets]="lineChartData"
+                        [labels]="lineChartLabels" [options]="lineChartOptions"
+                        [colors]="lineChartColors" [legend]="lineChartLegend"
+                        [chartType]="lineChartType"
+                        (chartHover)="chartHovered($event)"
+                        (chartClick)="chartClicked($event)">
+                </canvas>
+            </div>
+        </div>
+    </div>
+</div>
