--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -2,7 +2,7 @@
     <div class="row">
         <div class="col-md-4 push-md-4 login-page-content">
             <br>
-            <img src="assets/images/logo.png" height="40px" />
+            <img class="img-responsive" src="assets/images/logo.png" style="max-height: 35px" />
             <h1 hidden>¿Donde estaciono?</h1>
             <br>
             <br>
